styles/index.css
:root {
  --spacer: 1.5rem;

  --clr-orange-500: #ff6500;
  --clr-black: #101010;
  --clr-gray: #e0e0e0;
  --clr-white: #fffffe;

  --shadow-8dp: 0 8px 10px rgba(0, 0, 0, 0.1), 0 3px 14px rgba(0, 0, 0, 0.1),
    0 4px 5px rgba(0, 0, 0, 0.1);
}

/* Z-INDEX 

whatsapp: 1500
footer: 1001
header: 1000
main: 500
background: 1

*/

/* GENERAL */

*,
*::before,
*::after {
  box-sizing: border-box;
}

body {
  margin: 0;
  padding: 0;
  color: var(--clr-black);
  font-family: "Lato", sans-serif;
  background: var(--clr-white);
}

main {
  position: relative;
  z-index: 500;
}

section {
  padding: 3.75rem 0;
}

img {
  max-width: 100%;
  height: auto;
  display: block;
}

a {
  text-decoration: none;
  color: inherit;
}

/* TEXT */

h1,
h2,
h3,
h4,
h5,
h6,
p {
  margin: 0;
}

h1 {
  font-weight: 400;
  font-size: clamp(2.125rem, 10vw, 5.375rem);
  letter-spacing: 0.0156em;
}

h2 {
  font-weight: 700;
  font-size: clamp(1.5rem, 5vw, 3rem);
}

h3 {
  font-weight: 400;
  font-size: 1.5rem;
}

h6 {
  font-weight: 700;
  font-size: 1.25rem;
  letter-spacing: 0.0094em;
}

.text-body-1 {
  font-weight: 400;
  font-size: clamp(0.875rem, 3vw, 1.125rem);
  letter-spacing: 0.0313em;
  line-height: 1.5625em;
}

.text-body-2 {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: 0.0156em;
}

.text-caption {
  font-weight: 300;
  font-size: 0.75rem;
  line-height: 1rem;
  letter-spacing: 0.025em;
}

.text--center {
  text-align: center;
}

.text--orange {
  color: var(--clr-orange-500);
}

@media (max-width: 749px) {
  .text--bold-xs {
    font-weight: 700;
  }
}

/* UTILITY */

.flow-content > * + * {
  margin-top: var(--flow-space, calc(var(--spacer) * 1.25));
}

.flow-content--large {
  --flow-space: 3rem;
}

.split {
  display: flex;
  flex-direction: column-reverse;
}

.split > * + * {
  margin: var(--spacer) 0 0 0;
}

@media (max-width: 749px) {
  .container-xs {
    width: 85%;
    margin-right: auto;
    margin-left: auto;
  }
}

@media (min-width: 750px) {
  .split {
    flex-direction: row;
  }
  .split > * + * {
    margin: 0 0 0 var(--spacer);
  }
}

/* BUTTONS */

.btn {
  display: inline-block;
  font-size: var(--fs, 1.125rem);
  font-weight: bold;
  letter-spacing: 0.04em;
  padding: var(--p);
  border-radius: 200px;
  color: var(--fg, var(--clr-white));
  background: var(--bg, var(--clr-orange-500));
  border: 2px solid var(--border, var(--clr-orange-500));
}

.btn--sm {
  --fs: 0.75rem;
  --p: 0.8em 1em;
}

.btn--l {
  --p: 0.6em 2.5em;
}

.btn--outlined {
  --fg: var(--color-inverted, var(--clr-orange-500));
  --bg: none;
  --border: var(--border-inverted, var(--clr-orange-500));
}

@media (max-width: 749px) {
  .btn--inverted {
    --color-inverted: var(--clr-white);
    --border-inverted: var(--clr-white);
  }
}

@media (min-width: 750px) {
  .btn {
    padding: 0.5em 2em;
  }
}

/* SEPARATORS */

.vertical-line {
  margin: 0 2em;
  border-left: 2px solid var(--clr-gray);
  height: 50px;
}

.horizontal-line {
  margin: 1.5em auto;
  border-top: 1px solid var(--clr-gray);
  width: 50px;
}

/* HEADER */

header {
  position: fixed;
  width: 100%;
  height: 5rem;
  padding: 0 1.5rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
  box-shadow: 0 0.1875rem 0.625rem rgba(0, 0, 0, 0.1);
  background: var(--clr-orange-500);
  z-index: 1000;
}

#logo-svg {
  width: 80px;
  fill: var(--clr-white);
}

.header-buttons {
  display: flex;
  align-items: center;
}

#signin-btn,
#header-hr {
  display: none;
}

@media (min-width: 750px) {
  header {
    padding: 0 3em;
    background: var(--clr-white);
  }
  #logo-svg {
    width: 100px;
    fill: var(--clr-orange-500);
  }
  #signin-btn,
  #header-hr {
    display: inline-block;
  }
}

/* HERO */

.hero {
  padding-top: 0;
}

.hero-image {
  align-self: flex-end;
  margin-top: 0;
}

#hero-1280-img {
  display: none;
}

@media (min-width: 750px) {
  .hero {
    padding-top: 50px;
    align-items: center;
  }
  .hero-content {
    padding: 100px 0 0 100px;
  }
  .hero-image {
    width: 50%;
  }
  #hero-1280-img {
    display: block;
  }
  #hero-mobile-img {
    display: none;
  }
}

/* FEATURES */

#cellphone-1280-img {
  display: none;
}

.features {
  padding-bottom: 0;
}

.features-cards {
  padding: 1rem 0;
  display: flex;
  overflow-x: scroll;
  -webkit-overflow-scrolling: touch;
  scroll-snap-type: x mandatory;
  scroll-behavior: smooth;
}

.features-cards::-webkit-scrollbar {
  display: none;
}

.feature {
  min-width: 270px;
  max-width: 90%;
  padding: 1.5em 2em 1.5em 1.5em;
  background: white;
  border-radius: 10px;
  box-shadow: var(--shadow-8dp);
  scroll-snap-align: center;
}

.feature + .feature {
  margin-left: 2rem;
}

#gestion-svg,
#menu-digital-svg,
#pagos-svg,
#menu-visible-svg,
#soporte-svg,
#incremento-svg,
#fidelizacion-svg,
#tiempos-svg {
  width: 50px;
  height: 50px;
  margin-bottom: 1rem;
  fill: var(--clr-orange-500);
}

@media (min-width: 750px) {
  #cellphone-mobile-img {
    display: none;
  }
  #cellphone-1280-img {
    display: block;
    margin-top: -100px;
  }

  .features-content {
    width: 50%;
  }
  #interfaz-indicator {
    display: none;
  }
}

/* BACKOFFICE */

.backoffice > h2 {
  font-size: 1.25rem;
}

.backoffice-slider > img {
  margin: 0 auto;
  margin-bottom: 1rem;
}

@media (min-width: 750px) {
  .backoffice-slider > img {
    width: 80%;
  }
}

/* TESTIMONIALS */

.testimonials {
  padding-bottom: 0;
}

.testimonials-content {
  width: 70%;
  margin: 2rem auto;
  padding: 1.5em;
  background: white;
  border-radius: 10px;
  box-shadow: var(--shadow-8dp);
  overflow: hidden;
}

.testimonials-cards {
  display: flex;
  overflow-x: auto;
  -webkit-overflow-scrolling: touch;
  scroll-snap-type: x mandatory;
  scroll-behavior: smooth;
}

.testimonials-cards::-webkit-scrollbar {
  display: none;
}

.testimonial {
  scroll-snap-align: start;
  scroll-snap-stop: always;
  flex-shrink: 0;
  width: 100%;
  margin-right: 50px;
  border-radius: 10px;
  transform-origin: center center;
  transform: scale(1);
  transition: transform 0.5s;
  position: relative;
}

.testimonial + .testimonial {
  margin-left: 1rem;
}

/* #testimonial-2,
#testimonial-3 {
  opacity: 0;
} */

.comillas-svg {
  width: 50px;
  height: 50px;
  margin-bottom: 1rem;
  fill: var(--clr-orange-500);
}

/* FOOTER */

footer {
  position: relative;
  padding: 1.5rem 0;
  background: var(--clr-black);
  color: var(--clr-white);
  border-top-right-radius: 60px;
  z-index: 1001;
}

footer > .text-body-2:hover {
  color: var(--clr-orange-500);
}

#logo-v-svg {
  height: 32px;
}

/* INDICATOR */

.indicator {
  margin: 0 auto;
}

.indicator > a::after {
  content: " ";
  display: inline-block;
  width: 8px;
  height: 8px;
  margin: 0.25em;
  border-radius: 100px;
  background: var(--clr-orange-500);
}

/* MODAL */

#modal-container {
  position: fixed;
  z-index: 2000;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.7);
  visibility: hidden;
  opacity: 0;
  transition: 0.5s ease opacity;
}

#logo-modal-svg {
  width: 120px;
  height: 46px;
  fill: var(--clr-orange-500);
}

.modal-form {
  position: relative;
  width: 87%;
  margin: 1.2rem auto;
  padding: 3rem 1.5rem;
  background: var(--clr-white);
  border-radius: 10px;
  box-shadow: var(--shadow-8dp);
}

.close-btn {
  position: absolute;
  top: -1rem;
  right: 1rem;
  color: var(--clr-orange-500);
}

/* BACKGROUND */

.background {
  position: absolute;
  z-index: 1;
}

/* WHATSAPP */

.whatsapp {
  position: fixed;
  z-index: 1500;
  bottom: var(--spacer);
  right: var(--spacer);
  opacity: 0;
  transition: 1s ease opacity;
}

#whatsapp-svg {
  width: 56px;
  height: 56px;
}

